--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "canvacord": "^5.4.8",
+    "cleverbot-free": "^1.1.11",
     "discord-inline-reply": "^1.0.3",
     "discord.js": "^12.5.3",
-    "google-it": "^1.6.4",
-    "wikipedia": "^1.1.9",
-    "wtf_wikipedia": "^10.0.3"
+    "node-fetch": "^2.6.7",
+    "request": "^2.88.2"
   }
 }
